force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Tag_Assignment__c/agf__ADM_Tag_Assignment__c.object-meta.xml
<CustomObject>
    <label>Tag Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Tag Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>