force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Tag_Assignment__c/fields/agf__Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>agf__Assignment_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Rule</label>
    <referenceTo>agf__ADM_Assignment_Rule__c</referenceTo>
    <relationshipLabel>Tag Assignments</relationshipLabel>
    <relationshipName>Tag_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>