force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Tag_Assignment__c/fields/agf__Tag_Record_Type_Key__c.field-meta.xml
<CustomField>
    <fullName>agf__Tag_Record_Type_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Tag Record Type Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>